--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "zod": "^3.23.8"
   },
