--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
+    "@types/ws": "^8.5.10",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "ws": "^8.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
