--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/ws": "^8.5.10",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.5",
@@ -28,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "typescript": "^5.4.5"
   }
 }
