--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "typescript": "^5.4.5"
   }
 }
